--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=visit-tracker
 
-spring.datasource.url=jdbc:mysql://localhost:3307/mysqldump -u visituser -p visit_tracker_db > dump_file.sql
+spring.datasource.url=jdbc:mysql://localhost:3307/visit_tracker_db
 spring.datasource.username=visituser
 spring.datasource.password=visitpassword
 
